--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
-  "author": "Ishan Madhav",
+  "author": "Shivangi Sangwan",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
